# RayZaler

./: .gitmodules  CMakeLists.txt  README.md
LibRZ/: CMakeLists.txt
LibRZ/grammar/: model.yy
LibRZ/include/: ApertureStop.h  BenchElement.h  BlockElement.h  CPURayTracingEngine.h  CircularMirror.h  CircularWindow.h  CompositeElement.h  ConcaveMirror.h  ConicLens.h  ConicMirror.h  ConvexLens.h  DataProduct.h  Detector.h  EMInterface.h  Element.h  ElementMacros.h  ExprTkEvaluator.h  FT2Facade.h  FlatMirror.h  GLHelpers.h  GLModel.h  GLRenderEngine.h  GenericAperture.h  GenericCompositeModel.h  Helpers.h  IdealLens.h  IncrementalRotation.h  LensletArray.h  Linalg.h  Logger.h  Matrix.h  Medium.h  MediumBoundaries.h  MediumBoundary.h  ModelRenderer.h  OMModel.h  Obstruction.h  OpticalElement.h  ParabolicLens.h  ParabolicMirror.h  (+31 more)
LibRZ/include/Apertures/: Array.h  Circular.h  Conic.h  Parabolic.h  Rectangular.h  Spherical.h
LibRZ/include/DataProducts/: Scatter.h  ScatterTree.h
LibRZ/include/EMInterfaces/: All.h  DielectricEMInterface.h  DummyEMInterface.h  ParaxialEMInterface.h  ParaxialZernikeEMInterface.h  ReflectiveEMInterface.h
LibRZ/include/Elements/: All.h  ApertureStop.h  BenchElement.h  BlockElement.h  CircularWindow.h  ConicLens.h  ConicMirror.h  Detector.h  FlatMirror.h  IdealLens.h  LensletArray.h  Obstruction.h  ParabolicLens.h  ParabolicMirror.h  PhaseScreen.h  RayBeamElement.h  RectangularStop.h  RodElement.h  SphericalLens.h  SphericalMirror.h  StlMesh.h  Tripod.h  TubeElement.h
LibRZ/include/MediumBoundaries/: ApertureStop.h  CircularWindow.h  ConicLens.h  ConicMirror.h  FlatMirror.h  IdealLens.h  InfiniteMirror.h  LensletArray.h  Obstruction.h  PassThrough.h  PhaseScreen.h  RectangularStop.h  SquareFlatSurface.h
LibRZ/include/RayProcessors/: ApertureStop.h  CircularWindow.h  ConicLens.h  ConicMirror.h  FlatMirror.h  IdealLens.h  InfiniteMirror.h  LensletArray.h  Obstruction.h  ParabolicMirror.h  PassThrough.h  PhaseScreen.h  RectangularStop.h  SphericalLens.h  SphericalMirror.h  SquareFlatSurface.h
LibRZ/include/RayTracingHeuristics/: All.h  Dummy.h
LibRZ/include/Samplers/: Circular.h  Map.h  Point.h  Ring.h  Sampler.h
LibRZ/include/Surfaces/: Array.h  Circular.h  Conic.h  Parabolic.h  Rectangular.h  Spherical.h
LibRZ/python/: CMakeLists.txt  RayZaler.i
LibRZ/src/: ApertureStop.cpp  BenchElement.cpp  BlockElement.cpp  CPURayTracingEngine.cpp  CircularMirror.cpp  CircularWindow.cpp  CompositeElement.cpp  ConcaveMirror.cpp  ConicLens.cpp  ConicMirror.cpp  ConvexLens.cpp  DataProduct.cpp  Detector.cpp  EMInterface.cpp  Element.cpp  ExprTkEvaluator.cpp  FT2Facade.cpp  FlatMirror.cpp  GLHelpers.cpp  GLModel.cpp  GLRenderEngine.cpp  GenericAperture.cpp  GenericCompositeModel.cpp  Helpers.cpp  IdealLens.cpp  IncrementalRotation.cpp  LensletArray.cpp  Library.cpp  Linalg.cpp  Logger.cpp  Medium.cpp  MediumBoundaries.cpp  MediumBoundary.cpp  ModelRenderer.cpp  OMModel.cpp  Obstruction.cpp  OpticalElement.cpp  ParabolicLens.cpp  ParabolicMirror.cpp  ParserContext.cpp  (+30 more)
LibRZ/src/Apertures/: Array.cpp  Circular.cpp  Conic.cpp  Parabolic.cpp  Rectangular.cpp  Spherical.cpp
LibRZ/src/DataProducts/: Scatter.cpp  ScatterTree.cpp
LibRZ/src/EMInterfaces/: DielectricEMInterface.cpp  DummyEMInterface.cpp  ParaxialEMInterface.cpp  ParaxialZernikeEMInterface.cpp  ReflectiveEMInterface.cpp
LibRZ/src/Elements/: ApertureStop.cpp  BenchElement.cpp  BlockElement.cpp  CircularWindow.cpp  ConicLens.cpp  ConicMirror.cpp  Detector.cpp  FlatMirror.cpp  IdealLens.cpp  LensletArray.cpp  Obstruction.cpp  ParabolicLens.cpp  ParabolicMirror.cpp  PhaseScreen.cpp  RayBeamElement.cpp  RectangularStop.cpp  RodElement.cpp  SphericalLens.cpp  SphericalMirror.cpp  StlMesh.cpp  Tripod.cpp  TubeElement.cpp
LibRZ/src/MediumBoundaries/: ApertureStop.cpp  CircularWindow.cpp  ConicLens.cpp  ConicMirror.cpp  FlatMirror.cpp  IdealLens.cpp  InfiniteMirror.cpp  LensletArray.cpp  Obstruction.cpp  PassThrough.cpp  PhaseScreen.cpp  RectangularStop.cpp  SquareFlatSurface.cpp
LibRZ/src/RayProcessors/: ApertureStop.cpp  CircularWindow.cpp  ConicLens.cpp  ConicMirror.cpp  FlatMirror.cpp  IdealLens.cpp  InfiniteMirror.cpp  LensletArray.cpp  Obstruction.cpp  ParabolicMirror.cpp  PassThrough.cpp  PhaseScreen.cpp  RectangularStop.cpp  SphericalLens.cpp  SphericalMirror.cpp  SquareFlatSurface.cpp
LibRZ/src/RayTracingHeuristics/: Dummy.cpp
LibRZ/src/Samplers/: Circular.cpp  Map.cpp  Point.cpp  Ring.cpp  Sampler.cpp
LibRZ/src/Surfaces/: Array.cpp  Circular.cpp  Conic.cpp  Parabolic.cpp  Rectangular.cpp  Spherical.cpp
LibRZTests/: CMakeLists.txt
LibRZTests/include/: Common.h
LibRZTests/src/: Common.cpp  ElementTests.cpp  HitTests.cpp  RayTracerTests.cpp  ReferenceFrameTests.cpp  SimulationTests.cpp  TopLevelTests.cpp
RZGUI/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AsyncDataProductRenderer.cpp  AsyncDataProductRenderer.h  AsyncRayTracer.cpp  AsyncRayTracer.h  BeamPropertiesDialog.cpp  BeamPropertiesDialog.h  BeamPropertiesDialog.ui  CMakeLists.txt  ColorChooserButton.cpp  ColorChooserButton.h  ColorSettings.cpp  ColorSettings.h  CustomTextEditDelegate.cpp  CustomTextEditDelegate.h  DOFAdjustWidget.cpp  DOFAdjustWidget.h  DOFAdjustWidget.ui  DOFWidget.cpp  DOFWidget.h  DOFWidget.ui  DataProductWidget.cpp  DataProductWidget.h  DetectorDialog.cpp  DetectorDialog.h  DetectorDialog.ui  DetectorWindow.cpp  DetectorWindow.h  DetectorWindow.ui  ElementPropertyModel.cpp  ElementPropertyModel.h  ExportViewDialog.cpp  ExportViewDialog.h  ExportViewDialog.ui  ExprEvaluationContext.cpp  ExprEvaluationContext.h  FootprintInfoWidget.cpp  FootprintInfoWidget.h  (+56 more)
RZViewer/: CMakeLists.txt
RZViewer/include/: GLRenderEngine.h  GLUTEngine.h  RZGLModel.h
RZViewer/src/: GLModel.cpp  GLUTEngine.cpp  RZGLModel.cpp  main.cpp
cmake/modules/: FindNumPy.cmake  python.cmake
doc/: gen_elem_doc.py  gettingstarted.md  install.md
examples/: smaract.rzm  sosm.rzm  sosm_lens.rzm  sosm_params.rzm  sosm_stop.rzm  sosm_two.rzm  stacked_tables.rzm
examples/LOWFS/: Simulate-RadialSweep.json  (+1 more)
python/: setup.py.in
(+4 files in other folders)
